--- a/PathFinder/package.json
+++ b/PathFinder/package.json
@@ -10,20 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.9.0",
+    "expo": "^53.0.10",
     "expo-location": "^18.1.5",
+    "expo-modules-core": "^2.4.0",
     "qr-image": "^3.2.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-maps": "^1.23.8",
+    "react-native-permissions": "^5.4.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-share": "^12.0.11",
+    "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
