--- a/PathFinder/android/build.gradle
+++ b/PathFinder/android/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         targetSdkVersion = 35
         ndkVersion = "26.1.10909125"
         kotlinVersion = "2.0.21"
+        googlePlayServicesVersion = "18.0.0" // or latest
+        androidMapsUtilsVersion = "2.3.0"
     }
     repositories {
         google()
@@ -15,6 +17,7 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        implementation 'com.google.android.gms:play-services-maps:18.0.0'
     }
 }
 
