--- a/PathFinder/android/app/build.gradle
+++ b/PathFinder/android/app/build.gradle
@@ -115,6 +115,8 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation "com.google.android.gms:play-services-maps:$googlePlayServicesVersion"
+    implementation "com.google.maps.android:android-maps-utils:$androidMapsUtilsVersion"
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
