--- a/PathFinder/android/app/src/main/AndroidManifest.xml
+++ b/PathFinder/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,6 @@
 
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="YOUR_API_KEY_HERE"/>
+        android:value="AIzaSyCkZyFkG0hRCL9HHMHyRGu4T7Cexhrktq0"/>
     </application>
 </manifest>
