--- a/PathFinder/android/build.gradle
+++ b/PathFinder/android/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
-        implementation 'com.google.android.gms:play-services-maps:18.0.0'
+        // implementation 'com.google.android.gms:play-services-maps:18.0.0'
     }
 }
 
