--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://miltonongod:Milton123.com@hall-locator.8tmz3g4.mongodb.net/Hall-Locator?retryWrites=true&w=majority
 JWT_SECRET=6EITHQYDFjF+M1RIHEIX2b7STLhBKR4zHYLLuHBM610=
-PORT=5000
+NODE_ENV=production
