--- a/PathFinder/package.json
+++ b/PathFinder/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.14",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.14",
@@ -19,6 +20,7 @@
     "expo": "^53.0.10",
     "expo-location": "^18.1.5",
     "expo-modules-core": "^2.4.0",
+    "metro": "^0.82.4",
     "qr-image": "^3.2.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
