--- a/PathFinder/android/app/src/main/AndroidManifest.xml
+++ b/PathFinder/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
       android:roundIcon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
+      android:networkSecurityConfig="@xml/network_security_config"
       android:supportsRtl="true">
       <activity
         android:name=".MainActivity"
@@ -26,5 +27,6 @@
       <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyCkZyFkG0hRCL9HHMHyRGu4T7Cexhrktq0"/>
+        
     </application>
 </manifest>
