--- a/PathFinder/ios/PathFinder/Info.plist
+++ b/PathFinder/ios/PathFinder/Info.plist
@@ -49,6 +49,22 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<key>GMSApiKey</key>
 	<string>AIzaSyCkZyFkG0hRCL9HHMHyRGu4T7Cexhrktq0</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>192.168.225.241</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<false/>
 </dict>
 </plist>
